--- a/mymodule/pom.xml
+++ b/mymodule/pom.xml
@@ -22,6 +22,14 @@
       <version>1.0.0-SNAPSHOT</version>
       <type>pom</type>
     </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.3.1</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
 
